--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "body-parser": "^1.5.1",
     "express": "^4.17.1",
     "method-override": "^2.1.2",
-    "mongoose": "~3.6.11"
+    "mongoose": "^3.6.20"
   }
 }
